# GIS-LCA

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/: electricity_factors.json  transport_factors.json  water_scarcity_factors.json
docs/: research_brief.md
examples/: manufacturing_inventory.csv  manufacturing_metadata.json
examples/products/: demo_bottled_water_china_east.json  demo_methanol_texas.json  demo_sulfuric_acid_germany.json  out_bottled_water_cn_east.csv  out_bottled_water_cn_east.json  out_h2so4_de.csv  out_h2so4_de.json  out_methanol_tx.csv  out_methanol_tx.json
paper/: references.bib  whitepaper.md
scripts/: publish_github.sh
src/regionalized_lca_adapter/: __init__.py  adapter.py  cli.py  factors.py  geography.py  pipeline.py
src/regionalized_lca_adapter/products/: __init__.py  base.py  bottled_water.py  methanol.py  sulfuric_acid.py
tests/: test_adapter.py  test_products_mvp.py
