[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regionalized-lca-adapter"
version = "0.1.0"
description = "A lightweight geography normalization and regional factor adapter for LCA workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
regionalized-lca = "regionalized_lca_adapter.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
